--- a/main.css
+++ b/main.css
@@ -1,6 +1,30 @@
 .main{
     background-color: #002010;
     color: #fff;
+    button{
+        /* Link+Shadow+BackgroundColor */
+
+background: #008945;
+box-shadow: 0px 1px 1px rgba(10, 10, 10, 0.32);
+border-radius: 5px;
+
+/* Детальніше */
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 800;
+font-size: 14.5248px;
+line-height: 25px;
+/* identical to box height, or 172% */
+text-align: center;
+text-transform: uppercase;
+
+color: #FFFFFF;
+padding: 5px 20px;
+border: none;
+
+
+    }
 }
 
 .main-image{
