--- a/main.css
+++ b/main.css
@@ -94,7 +94,7 @@
     }
 }
 
-body main .btn-success-custom{
+body main .btn-success-custom,header nav .btn-success-custom{
     
 background: #008945;
 box-shadow: 0px 1px 1px rgba(10, 10, 10, 0.32);
