--- a/main.css
+++ b/main.css
@@ -14,14 +14,11 @@
     }
 }
 
-button{
-        /* Link+Shadow+BackgroundColor */
-
+button, .button{
+text-decoration: none;
 background: #008945;
 box-shadow: 0px 1px 1px rgba(10, 10, 10, 0.32);
 border-radius: 5px;
-
-/* Детальніше */
 
 font-family: 'Inter';
 font-style: normal;
@@ -67,5 +64,3 @@ border: none;
     height: 200px;
     object-fit: cover;
 }
-
-.footer-curve {min-height: 20vh; background-color: #008945; border-top-left-radius: 50% 100px; border-top-right-radius: 50% 100px; padding-top: 80px; margin-top: 80px; }
