--- a/about.css
+++ b/about.css
@@ -1,3 +1,11 @@
-.about{
-    background-color: blue;
+.about {
+  text-align: center;
+  padding-top: 100px;
+}
+
+.about1 {
+  background-color: white;
+  color: black;
+  padding: 40px 20px;
+  margin-top: 40px;
 }
