--- a/main.css
+++ b/main.css
@@ -1,66 +1,43 @@
-.main{
-    background-color: #002010;
-    color: #fff;
+.main {
+  background-color: #002010;
+  color: #fff;
 }
 
-.main-image{
-    min-height: 590px;
-    background-image: url("./img/main_bg.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    text-align: center;
-    *{
-        margin-top: 40px;
-    }
+.main-image {
+  min-height: 590px;
+  background-image: url('./img/main_bg.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  text-align: center;
+  * {
+    margin-top: 40px;
+  }
 }
-
-button, .button{
-text-decoration: none;
-background: #008945;
-box-shadow: 0px 1px 1px rgba(10, 10, 10, 0.32);
-border-radius: 5px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 800;
-font-size: 14.5248px;
-line-height: 25px;
-/* identical to box height, or 172% */
-text-align: center;
-text-transform: uppercase;
-
-color: #FFFFFF;
-padding: 5px 20px;
-border: none;
-
-
-    }
 
 .features-section {
-    background: linear-gradient(rgba(0,40,20,0.5), rgba(0,40,20,0.5)), 
-                url('img/image\ 1.png');
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+  background: linear-gradient(rgba(0, 40, 20, 0.5), rgba(0, 40, 20, 0.5)), url('img/image\ 1.png');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .card1 {
-    padding: 50px 30px;
-    background-color: #008945;
-    margin-top: 80px;
+  padding: 50px 30px;
+  background-color: #008945;
+  margin-top: 80px;
 }
 
 .news-card {
-    border-radius: 4px;
-    overflow: hidden;
-    background-color: white;
+  border-radius: 4px;
+  overflow: hidden;
+  background-color: white;
 }
 .news-card .card-img-top {
-    height: 200px;
-    object-fit: cover;
+  height: 200px;
+  object-fit: cover;
 }
 
 .news-card img {
-    height: 200px;
-    object-fit: cover;
+  height: 200px;
+  object-fit: cover;
 }
