--- a/reptiles.css
+++ b/reptiles.css
@@ -66,3 +66,20 @@ main {
   width: 100%;
   height: auto;
 }
+
+@media screen and (max-width: 768px) {
+  .main-content {
+    flex-wrap: wrap;
+    flex-direction: column;
+    div {
+      width: 100%;
+    }
+  }
+  .hero-image {
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+  .gallery img {
+    width: 48%;
+  }
+}
